--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,27 @@
 </div>
 
   <!-- Show Page Customization starts -->
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_gifts" %>
+  </div>
+</div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_relationships" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_items" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_circles" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
