--- a/app/views/circles/_circle_relationships.html.erb
+++ b/app/views/circles/_circle_relationships.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="circle_relationships_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "circles/circle_relationships_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
