--- a/app/views/relationships/_relationship_items.html.erb
+++ b/app/views/relationships/_relationship_items.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="relationship_items_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "relationships/relationship_items_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
