--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -2,30 +2,9 @@
 
 <%= form_with(model: item, local: true, novalidate: true, class: "mb-3") do |f| %>
   <!-- Label and input for created_by start -->
-  <div class="form-group">
-    <% created_by_class = "form-control" %>
-    <% created_by_was_invalid = item.errors.include?(:created_by) %>
-
-    <% if was_validated %>
-      <% if created_by_was_invalid %>
-        <% created_by_class << " is-invalid" %>
-      <% else %>
-        <% created_by_class << " is-valid" %>
-      <% end %>
-    <% end %>
-
-    <%= f.label :created_by %>
-    <!-- Input for created_by start -->
-    <%= f.collection_select :created_by, User.all, :id, :to_s, {}, class: "form-control" %>
-    <!-- Input for created_by end -->
-    <% if created_by_was_invalid %>
-      <% item.errors.full_messages_for(:created_by).each do |message| %>
-        <div class="invalid-feedback d-flex">
-          <%= message %>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
+  <!-- Input for "created_by" start -->
+  <%= f.hidden_field :created_by, value: current_user.id %>
+  <!-- Input for "created_by" end -->
   <!-- Label and input for created_by end -->
   <!-- Label and input for image start -->
   <div class="form-group">
