--- a/app/views/relationships/_relationship_items_new_form.html.erb
+++ b/app/views/relationships/_relationship_items_new_form.html.erb
@@ -65,7 +65,7 @@
     <%= f.label :purchased_by_id %>
 
     <!-- Input for purchased_by_id start -->
-    <%= f.text_field :purchased_by_id, class: "form-control" %>
+    <%= f.collection_select :purchased_by_id, User.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for purchased_by_id end -->
   </div>
   <!-- Label and input for purchased_by_id end -->
