--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -46,6 +46,9 @@
       <dt>Priority</dt>
       <dd><%= item.priority %></dd>
 
+      <dt>Name</dt>
+      <dd><%= item.name %></dd>
+
     </dl>
 
     <div class="row">
