--- a/app/views/circles/_circle_items_new_form.html.erb
+++ b/app/views/circles/_circle_items_new_form.html.erb
@@ -36,12 +36,18 @@
     <%= f.collection_select :purchased_by_id, User.all, :id, :to_s, {}, class: "form-control" %>
   </div>
 
-  <%= f.hidden_field :circle_id, value: @relationship.id %>
+  <%= f.hidden_field :circle_id, value: @circle.id %>
 
   <div class="form-group">
     <%= f.label :priority %>
 
     <%= f.text_field :priority, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :name %>
+
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
   <%= f.submit "Create item", class: "btn btn-block btn-outline-secondary" %>
