--- a/app/views/circles/show.html.erb
+++ b/app/views/circles/show.html.erb
@@ -12,6 +12,12 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
+    <%= render partial: "circles/circle_items" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
     <%= render partial: "circles/circle_users" %>
   </div>
 </div>
