--- a/app/views/items/_items_search_form.html.erb
+++ b/app/views/items/_items_search_form.html.erb
@@ -2,6 +2,11 @@
   <p class="lead">Narrow results:</p>
 
   <div class="form-group">
+    <%= f.label :name_cont, "Name contains" %>
+    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :priority, "Priority" %>
     <div class="row">
       <div class='col-md-6 mb-1'>
@@ -99,6 +104,11 @@
   <div class="form-group">
     <%= f.label :purchased_by_email_cont, "Purchased by email contains" %>
     <%= f.text_field :purchased_by_email_cont, :class => "form-control", :placeholder => "Purchased by email contains" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :circle_name_cont, "Circle name contains" %>
+    <%= f.text_field :circle_name_cont, :class => "form-control", :placeholder => "Circle name contains" %>
   </div>
 
 
